...
            "state" : "translated",
            "value" : "Foti hinzuefüege"
          }
        }
      }
    },
    "Add Recipe" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rezept hinzufügen"
          }
...
            "state" : "translated",
            "value" : "Neus Rezäpt"
          }
        }
      }
    },
    "All" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alle"
...
            "state" : "translated",
            "value" : "Erhitze"
          }
        }
      }
    },
    "Home" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start"
          }
...
            "state" : "translated",
            "value" : "Keis Rezept gfunde"
          }
        }
      }
    },
    "No Recipes Yet" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Noch keine Rezepte"
          }
...
            "state" : "translated",
            "value" : "Rezept-Site"
          }
        }
      }
    },
    "RecipeJoe" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "RecipeJoe"
          }
...
      }
    },
    "Saving..." : {
      "comment" : "A text that appears while saving data.",
      "isCommentAutoGenerated" : true
    },
    "Search" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Suche"
          }
...
            "state" : "translated",
            "value" : "Suechi"
          }
        }
      }
    },
    "Search by name, category, cuisine, or ingredients" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Suche nach Name, Kategorie, Küche oder Zutaten"
          }
...
            "state" : "translated",
            "value" : "Suech nach Name, Kategorie, Chuchi oder Zuetate"
          }
        }
      }
    },
    "Search Recipes" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rezepte suchen"
          }
...
      }
    },
    "Set %@ Time" : {
      "comment" : "A heading that instructs the user to set a time. The argument is the title of the time being set.",
      "isCommentAutoGenerated" : true
    },
    "Settings" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Einstellungen"
...
            "state" : "translated",
            "value" : "Wird ufeglade..."
          }
        }
      }
    },
    "Version" : {
      "comment" : "Version label in settings",
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
